Fixes to packaging

--- a/data/com.github.suburbanfilth.noted.desktop
+++ b/data/com.github.suburbanfilth.noted.desktop
@@ -3,7 +3,7 @@ Name=Noted
 GenericName=Note
 Comment=Take notes with ease
 Categories=Utility;Education;Office
-Exec=com.github.suburbanfilth.Noted
+Exec=com.github.suburbanfilth.noted
 Icon=application-default-icon
 Terminal=false
 Type=Application
