--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,5 @@
 Source: com.github.suburbanfilth.noted
+X-Python-Version: >= 2.6
 Section: editors
 Priority: optional
 Maintainer: David Hewitt <davidmhewitt@gmail.com>
@@ -10,6 +11,6 @@ Standards-Version: 3.9.3
 
 Package: com.github.suburbanfilth.noted
 Architecture: any
-Depends: ${python:Depends}, ${shlibs:Depends}, python-sqlalchemy
+Depends: ${python:Depends}, ${misc:Depends}, python-sqlalchemy
 Description: Note taking app
  Take notes with ease with inline formatting
