--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,6 @@
 #! /usr/bin/make -f
 
-#export DH_VERBOSE = 1
-export PYBUILD_NAME = foo
+export PYBUILD_INSTALL_ARGS ?= --install-lib=/usr/share/com.github.suburbanfilth.noted
 
 %:
-        dh $@ --with python2 --buildsystem=pybuild
+	dh $@ --with python2 --buildsystem=pybuild
