added icons and restored the appdata

--- a/data/com.github.suburbanfilth.noted.desktop
+++ b/data/com.github.suburbanfilth.noted.desktop
@@ -4,7 +4,7 @@ GenericName=Note
 Comment=Take notes with ease
 Categories=Utility;Education;Office
 Exec=com.github.suburbanfilth.noted
-Icon=application-default-icon
+Icon=Noted.png
 Terminal=false
 Type=Application
 X-GNOME-Gettext-Domain=hello-again
