fixed the issues opened by the appcenter devs

--- a/data/com.github.suburbanfilth.noted.desktop
+++ b/data/com.github.suburbanfilth.noted.desktop
@@ -4,8 +4,8 @@ GenericName=Note
 Comment=Take notes with ease
 Categories=Utility;Education;Office;
 Exec=com.github.suburbanfilth.noted
-Icon=Noted
+Icon=com.github.suburbanfilth.noted
 Terminal=false
 Type=Application
-X-GNOME-Gettext-Domain=hello-again
+X-GNOME-Gettext-Domain=com.github.suburbanfilth.noted
 Keywords=Hello;World;Example;
